Final changes to merge dojo example with new template & spec

--- a/architecture-examples/dojo/js/todo/app.html
+++ b/architecture-examples/dojo/js/todo/app.html
@@ -11,10 +11,10 @@
         <ul id="todo-list" data-dojo-attach-point="todo_list" data-dojo-type="dojox.mvc.Repeat" data-dojo-props="ref: this.model.todos, exprchar: '#'">
             <li data-dojo-type="dojox.mvc.Group" data-dojo-props="ref: '#{this.index}'">
             <div class="view">
-                <label class="dijitInline inline_edit" data-dojo-type="dijit.InlineEditBox"
-                    data-dojo-props='ref: "todo_text", editor:"dijit.form.TextBox", autosave:true'></label>
+                <label class="dijitInline inline_edit" data-dojo-type="todo.form.InlineEditBox"
+                    data-dojo-props='ref: "title", editor:"dijit.form.TextBox", autosave:true'></label>
 
-                <input class="toggle" type="checkbox" data-dojo-type="todo.form.CheckBox" data-dojo-props='ref: "isDone"'>
+                <input class="toggle" type="checkbox" data-dojo-type="todo.form.CheckBox" data-dojo-props='ref: "completed"'>
                 <button class="destroy" data-model-id="#{this.index}">
                 </button>
             </div>
@@ -27,7 +27,7 @@
             <strong>
                 <span data-dojo-type="dojox.mvc.Output" data-dojo-props="ref: this.model.incomplete" class="number"></span>
             </strong>
-            <span class="word">items</span> left.
+            <span class="word">item<span class="plural">s</span></span> left.
         </span>
 	    <!-- Remove this if you don't implement routing -->
 		<ul id="filters">
