Close GH-176: Changed Angular bindings so they will not be visible to the user prior to expression rendering..

--- a/architecture-examples/angularjs/index.html
+++ b/architecture-examples/angularjs/index.html
@@ -24,7 +24,7 @@
         <li ng-repeat="todo in todos" ng-dblclick="editTodo(todo)" ng-class="{done: todo.done, editing: todo.editing}">
           <div class="view">
             <input type="checkbox" class="toggle" name="todo.done" ng-model="todo.done">
-            <label>{{todo.title}}</label>
+            <label ng-bind="todo.title">Loading...</label>
             <a class="destroy" ng-click="removeTodo(todo)"></a>
           </div>
           <form ng-submit="finishEditing(todo)">
@@ -34,7 +34,7 @@
       </ul>
     </section>
     <footer ng-show="todos.length">
-      <a id="clear-completed" ng-click="clearDoneTodos()" ng-show="doneTodos().length">Clear {{doneTodos().length}} items</a>
+      <a id="clear-completed" ng-click="clearDoneTodos()" ng-show="doneTodos().length" ng-bind-template="Clear {{doneTodos().length}} items"></a>
       <div id="todo-count">
         <ng-pluralize count="remainingTodos().length" when="todoForms"></ng-pluralize>
       </div>
