Removed booter.js and actually use the module that we already have

--- a/architecture-examples/angularjs/index.html
+++ b/architecture-examples/angularjs/index.html
@@ -10,7 +10,7 @@
   <![endif]-->
 </head>
 <body>
-  <div ng-controller="App.Controllers.TodoController" id="todoapp">
+  <div ng-controller="TodoController" id="todoapp">
     <header>
       <h1>Todos</h1>
       <form id="todo-form" ng-submit="addTodo()">
@@ -47,7 +47,6 @@
     Credits: <a href="http://twitter.com/cburgdorf">Christoph Burgdorf</a>, <a href="http://ericbidelman.com">Eric Bidelman</a>
   </div>
   <script src="../../assets/base.js"></script>
-  <script src="js/booter.js"></script>
   <script src="js/libs/angular/angular.min.js"></script>
   <script src="js/controllers.js"></script>
 </body>
