--- a/architecture-examples/extjs/index.html
+++ b/architecture-examples/extjs/index.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>ExtJS • TodoMVC</title>
-        <link rel="stylesheet" href="../assets/base.css">
+        <!--<link rel="stylesheet" href="../../assets/base.css">-->
         <link rel="stylesheet" href="css/app.css">
 	<!--[if IE]>
-	<script src="../assets/ie.js"></script>
+        <script src="../../assets/ie.js"></script>
 	<![endif]-->
 </head>
 <body>
