--- a/labs/index.html
+++ b/labs/index.html
@@ -92,6 +92,9 @@
 						<li>
 							<a href="architecture-examples/plastronjs/index.html" data-source="https://github.com/rhysbrettbowen/PlastronJS" data-content="PlastronJS is an mvc framework built on top of the Closure Library and built to compile with projects that use the Closure Compiler.">PlastronJS *</a>
 						</li>
+						<li>
+							<a href="dependency-examples/knockoutjs_require/index.html" data-source="" data-content="This project is an adaptation of /architecture-examples/knockoutjs with require.js.">Knockout + Require.js *</a>
+						</li>
 					</ul>
 					<ul class="nav nav-pills">
 						<li>
