--- a/architecture-examples/angularjs/index.html
+++ b/architecture-examples/angularjs/index.html
@@ -1,53 +1,61 @@
 <!doctype html>
-<html ng-app="todomvc">
+<html lang="en" ng-app="todomvc">
 <head>
-  <meta charset="utf-8">
-  <title>AngularJS - TodoMVC</title>
-  <link rel="stylesheet" href="css/base.css">
-  <link rel="stylesheet" href="css/app.css">
-  <!--[if IE]>
-  <script src="../../assets/ie.js"></script>
-  <![endif]-->
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>AngularJS - TodoMVC</title>
+	<link rel="stylesheet" href="../../assets/base.css">
+	<!--[if IE]>
+	<script src="../../assets/ie.js"></script>
+	<![endif]-->
 </head>
 <body>
-  <div ng-controller="TodoController" id="todoapp">
-    <header>
-      <h1>Todos</h1>
-      <form id="todo-form" ng-submit="addTodo()">
-        <input type="text" id="new-todo" name="newTodo" ng-model="newTodo" placeholder="What needs to be done?">
-      </form>
-    </header>
-    <section id="main" ng-show="todos.length">
-      <input type="checkbox" id="toggle-all" ng-click="markAllDone()" ng-checked="remainingTodos().length == 0">
-      <label for="toggle-all">Mark all as complete</label>
-      <ul id="todo-list">
-        <li ng-repeat="todo in todos" ng-dblclick="editTodo(todo)" ng-class="{done: todo.done, editing: todo.editing}">
-          <div class="view">
-            <input type="checkbox" class="toggle" name="todo.done" ng-model="todo.done">
-            <label ng-bind="todo.title">Loading...</label>
-            <a class="destroy" ng-click="removeTodo(todo)"></a>
-          </div>
-          <form ng-submit="finishEditing(todo)">
-            <input type="text" class="edit" name="todo.title" ng-model="todo.title" my:blur="finishEditing(todo)">
-          </form>
-        </li>
-      </ul>
-    </section>
-    <footer ng-show="todos.length">
-      <a id="clear-completed" ng-click="clearDoneTodos()" ng-show="doneTodos().length" ng-bind-template="Clear {{doneTodos().length}} items"></a>
-      <div id="todo-count">
-        <ng-pluralize count="remainingTodos().length" when="todoForms"></ng-pluralize>
-      </div>
-    </footer>
-  </div>
-  <div id="instructions">
-    Double-click to edit a todo.
-  </div>
-  <div id="credits">
-    Credits: <a href="http://twitter.com/cburgdorf">Christoph Burgdorf</a>, <a href="http://ericbidelman.com">Eric Bidelman</a>
-  </div>
-  <script src="../../assets/base.js"></script>
-  <script src="js/libs/angular/angular.min.js"></script>
-  <script src="js/controllers.js"></script>
+	<section id="todoapp" ng-controller="TodoController">
+		<header id="header">
+			<h1>todos</h1>
+			<form id="todo-form" ng-submit="addTodo()">
+				<input id="new-todo" placeholder="What needs to be done?" type="text" name="newTodo" ng-model="newTodo">
+			</form>
+		</header>
+		<section id="main" ng-show="todos.length">
+			<input id="toggle-all" type="checkbox" ng-model="allChecked" ng-change="markAllDone()" ng-checked="remainingTodos().length == 0">
+			<label for="toggle-all">Mark all as complete</label>
+			<ul id="todo-list">
+				<li ng-repeat="todo in todos | filter:statusFilter" ng-dblclick="editTodo(todo)" ng-class="{completed: todo.completed, editing: todo.editing}">
+	        			<div class="view">
+				                <input class="toggle" type="checkbox" name="todo.completed" ng-model="todo.completed">
+				                <label ng-bind="todo.title">Loading...</label>
+				                <button class="destroy" ng-click="removeTodo(todo)"></button>
+			        	</div>
+				        <form ng-submit="finishEditing(todo)">
+			                	<input class="edit" type="text" name="todo.title" ng-model="todo.title" todo-blur="finishEditing(todo)" todo-focus="todo.editing">
+			        	</form>
+				</li>
+			</ul>
+		</section>
+		<footer id="footer" ng-show="todos.length">
+			<span id="todo-count"><strong>{{remainingTodos().length}}</strong> <ng-pluralize count="remainingTodos().length" when="todoForms"></ng-pluralize></span>
+			<ul id="filters">
+				<li>
+					<a ng-class="{selected: location.path() == '/'} " href="#/">All</a>
+				</li>
+				<li>
+					<a ng-class="{selected: location.path() == '/active'}" href="#/active">Active</a>
+				</li>
+				<li>
+					<a ng-class="{selected: location.path() == '/completed'}" href="#/completed">Completed</a>
+				</li>
+			</ul>
+			<button id="clear-completed" ng-click="clearDoneTodos()" ng-show="completedTodos().length" ng-bind-template="Clear completed ({{completedTodos().length}})"></button>
+		</footer>
+	</section>
+	<footer id="info">
+		<p>Double-click to edit a todo.</p>
+		<p>Credits: <a href="http://twitter.com/cburgdorf">Christoph Burgdorf</a>, <a href="http://ericbidelman.com">Eric Bidelman</a>, <a href="http://jacobmumm.com">Jacob Mumm</a></p>
+	</footer>
+	<script src="../../assets/base.js"></script>
+	<script src="js/libs/angular/angular.min.js"></script>
+	<script src="js/controllers/todo.js"></script>
+	<script src="js/directives/todo-directives.js"></script>
 </body>
 </html>
