--- a/architecture-examples/angularjs_persistencejs/index.html
+++ b/architecture-examples/angularjs_persistencejs/index.html
@@ -1,90 +1,66 @@
 <!doctype html>
-<html xmlns:ng="http://angularjs.org/" xmlns:my="http://rx.org">
+<html lang="en" ng-app="todomvc">
 <head>
 	<meta charset="utf-8">
-	<title>AngularJS with PersistenceJS Storage Todo App</title>
-	<link rel="stylesheet" href="css/app.css">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>AngularJS - TodoMVC</title>
+	<link rel="stylesheet" href="../../assets/base.css">
 	<!--[if IE]>
 	<script src="../../assets/ie.js"></script>
 	<![endif]-->
 </head>
 <body>
-		<div ng:controller="App.Controllers.TodoController" id="todoapp">
-			<div class="title">
-					<h1>
-							Todos
-					</h1>
-			</div>
-			<div class="content">
-					<div id="todo-form">
-					</div>
-					<form id="todo-form" ng:submit="addTodo()">
-							<input id="new-todo" name="newTodo" my:blur="addTodo()" placeholder="What needs to be done?" type="text">
-							<span class="ui-tooltip-top" ng:show="showHitEnterHint">
-									Press Enter to save this task
-							</span>
-					</form>
-					<div id="todos">
-							<ul id="todo-list">
-								<li class="todo" ng:class="'editing-' + todo.editing + ' done-' + todo.done" ng:repeat="todo in todos">
-									<div class="display">
-										<input ng:change="changeStatus(todo)" class="check" type="checkbox" name="todo.done" / >
-										<div ng:click="editTodo(todo)" class="todo-content"> {{ todo.content }} </div>
-										<span class="todo-destroy" ng:click="removeTodo(todo)"></span>
-								 </div>
-								<div class="edit">
-									<form ng:submit="finishEditing(todo)">
-											<input class="todo-input" my:focus="todo.editing" my:blur="finishEditing(todo)" name="todo.content" type="text">
-									</form>
-								</div>
-								</li>
-							</ul>
-					</div>
-					<div id="todo-stats">
-						<span class="todo-count" ng:show="hasTodos()">
-							<ng:pluralize count="remainingTodos()" when="{'0' : 'No items left.', '1': '1 item left.', 'other' : '{} items left.' }">
-							</ng:pluralize>
-						</span>
-						<span class="todo-clear" ng:show="hasFinishedTodos()">
-								<a ng:click="clearCompletedItems()">
-									Clear <ng:pluralize count="finishedTodos()" when="{'1': '1 completed item', 'other' : '{} completed items' }">
-									</ng:pluralize>
-								</a>
-						</span>
-			</div>
-			</div>
-	</div>
-	<ul id="instructions">
-		<li>Click to edit a todo.</li>
-	</ul>
-	<div id="credits">
-			<p>
-					Originally Created by
-					<br>
-					<a href="http://jgn.me/">Jérôme Gravel-Niquet</a>
-			</p>
-			<p>
-					Rewritten to use <a href="http://angularjs.org">AngularJS </a> by
-					<br>
-					<a href="http://cburgdorf.wordpress.com/">Christoph Burgdorf</a>
-					<br>Cleanup, edits: <a href="http://www.linkedin.com/pub/dan-doyon/2/1b0/a83">Dan Doyon</a>
-			</p>
-	<p>
-		Extended for persistent WebSQL storage by <br/>
-		<a href="http://jacobmumm.com">Jacob Mumm</a><br/>
-		Using <a href="http://persistencejs.org">PersistenceJS</a>
-	</p>
-	</div>
+	<section id="todoapp" ng-controller="TodoController">
+		<header id="header">
+			<h1>todos</h1>
+			<form id="todo-form" ng-submit="addTodo()">
+				<input id="new-todo" placeholder="What needs to be done?" type="text" name="newTodo" ng-model="newTodo">
+			</form>
+		</header>
+		<section id="main" ng-show="todos.length">
+			<input id="toggle-all" type="checkbox" ng-model="allChecked" ng-change="markAllDone()" ng-checked="remainingTodos().length == 0">
+			<label for="toggle-all">Mark all as complete</label>
+			<ul id="todo-list">
+				<li ng-repeat="todo in todos | filter:statusFilter" ng-dblclick="editTodo(todo)" ng-class="{done: todo.completed, editing: todo.editing}">
+	        			<div class="view">
+				                <input class="toggle" type="checkbox" name="todo.completed" ng-model="todo.completed" ng-change="toggleDone(todo)">
+				                <label ng-bind="todo.title">Loading...</label>
+				                <button class="destroy" ng-click="removeTodo(todo)"></button>
+			        	</div>
+				        <form ng-submit="finishEditing(todo)">
+			                	<input class="edit" type="text" name="todo.title" ng-model="todo.title" todo-blur="finishEditing(todo)" todo-focus="todo.editing">
+			        	</form>
+				</li>
+			</ul>
+		</section>
+		<footer id="footer" ng-show="todos.length">
+			<span id="todo-count"><strong>{{remainingTodos().length}}</strong> <ng-pluralize count="remainingTodos().length" when="todoForms"></ng-pluralize></span>
+			<ul id="filters">
+				<li>
+					<a ng-class="{selected: location.path() == '/'} " href="#/">All</a>
+				</li>
+				<li>
+					<a ng-class="{selected: location.path() == '/active'}" href="#/active">Active</a>
+				</li>
+				<li>
+					<a ng-class="{selected: location.path() == '/completed'}" href="#/completed">Completed</a>
+				</li>
+			</ul>
+			<button id="clear-completed" ng-click="clearDoneTodos()" ng-show="doneTodos().length" ng-bind-template="Clear completed ({{doneTodos().length}})"></button>
+		</footer>
+	</section>
+	<footer id="info">
+		<p>Double-click to edit a todo.</p>
+		<p>Created by <a href="http://twitter.com/cburgdorf">Christoph Burgdorf</a>.</p>
+		<p>Extended to use PersistenceJS for local storage by <a href="http://jacobmumm.com">Jacob Mumm</a>.</p>
+	</footer>
 	<script src="../../assets/base.js"></script>
-	<script src="js/booter.js"></script>
-	<script src="lib/angular/angular.min.js" ng:autobind></script>
-	<script src="lib/rx/rx.js"></script>
-	<script src="lib/rx/rx.angular.js"></script>
-	<script src="lib/persistence/persistence.js"></script>
-	<script src="lib/persistence/persistence.store.sql.js"></script>
-	<script src="lib/persistence/persistence.store.websql.js"></script>
-	<script src="js/controllers.js"></script>
-	<script src="js/directive.js"></script>
-	<script src="js/services.js"></script>
+	<script src="js/libs/angular/angular.min.js"></script>
+	<script src="js/libs/persistencejs/persistence.js"></script>
+	<script src="js/libs/persistencejs/persistence.store.sql.js"></script>
+	<script src="js/libs/persistencejs/persistence.store.websql.js"></script>
+	<script src="js/controllers/todo.js"></script>
+	<script src="js/modules/persistence-service.js"></script>
+	<script src="js/directives/todo-directives.js"></script>
 </body>
 </html>
