use built maria.js file and organize files according to framework's recommended best practices

--- a/labs/architecture-examples/maria/src/index.html
+++ b/labs/architecture-examples/maria/src/index.html
@@ -15,35 +15,9 @@
         document.write('<p id="loading">loading...</p>');
     </script>
 
-    <script src="lib/evento/evento.js"></script>
-    <script src="lib/hijos/hijos.js"></script>
-    <script src="lib/arbutus/arbutus.js"></script>
-    <script src="lib/grail/grail.js"></script>
-    <script src="lib/hormigas/hormigas.js"></script>
+    <script src="../lib/maria/maria.js"></script>
 
-    <script src="src/namespace.js"></script>
-    <script src="src/borrow.js"></script>
-    <script src="src/borrowEvento.js"></script>
-    <script src="src/borrowHijos.js"></script>
-    <script src="src/borrowArbutus.js"></script>
-    <script src="src/borrowGrail.js"></script>
-    <script src="src/borrowHormigas.js"></script>
-    <script src="src/subclass.js"></script>
-    <script src="src/Model.js"></script>
-    <script src="src/SetModel.js"></script>
-    <script src="src/View.js"></script>
-    <script src="src/ElementView.js"></script>
-    <script src="src/SetView.js"></script>
-    <script src="src/Controller.js"></script>
-
-    <script src="src/Model.subclass.js"></script>
-    <script src="src/SetModel.subclass.js"></script>
-    <script src="src/View.subclass.js"></script>
-    <script src="src/ElementView.subclass.js"></script>
-    <script src="src/SetView.subclass.js"></script>
-    <script src="src/Controller.subclass.js"></script>
-
-    <script src="lib/aristocrat/aristocrat.js"></script>
+    <script src="../lib/aristocrat/aristocrat.js"></script>
 
     <script src="js/namespace.js"></script>
     <script src="js/models/TodoModel.js"></script>
