--- a/architecture-examples/angularjs/index.html
+++ b/architecture-examples/angularjs/index.html
@@ -5,36 +5,40 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>AngularJS - TodoMVC</title>
   <link rel="stylesheet" href="../../assets/base.css">
+  <style>[ng-cloak] {display: none}</style>
   <!--[if IE]>
   <script src="../../assets/ie.js"></script>
   <![endif]-->
+
 </head>
 <body>
-  <section id="todoapp" ng-controller="TodoController">
+  <section id="todoapp" ng-controller="TodoCtrl">
     <header id="header">
       <h1>todos</h1>
       <form id="todo-form" ng-submit="addTodo()">
         <input id="new-todo" placeholder="What needs to be done?" ng-model="newTodo" autofocus>
       </form>
     </header>
-    <section id="main" ng-show="todos.length">
-      <input id="toggle-all" type="checkbox" ng-model="allChecked" ng-change="markAllDone()" ng-checked="remainingTodos().length == 0">
+    <section id="main" ng-show="todos.length" ng-cloak>
+      <input id="toggle-all" type="checkbox" ng-model="allChecked" ng-click="markAll(allChecked)">
       <label for="toggle-all">Mark all as complete</label>
       <ul id="todo-list">
-        <li ng-repeat="todo in todos | filter:statusFilter" ng-dblclick="editTodo(todo)" ng-class="{completed: todo.completed, editing: todo.editing}">
+        <li ng-repeat="todo in todos | filter:statusFilter" ng-dblclick="editTodo(todo)" ng-class="{completed: todo.completed, editing: todo == editedTodo}">
           <div class="view">
-            <input class="toggle" type="checkbox" name="todo.completed" ng-model="todo.completed">
-            <label ng-bind="todo.title">Loading...</label>
+            <input class="toggle" type="checkbox" ng-model="todo.completed">
+            <label>{{todo.title}}</label>
             <button class="destroy" ng-click="removeTodo(todo)"></button>
           </div>
-          <form ng-submit="finishEditing(todo)">
-            <input class="edit" name="todo.title" ng-model="todo.title" todo-blur="finishEditing(todo)" todo-focus="todo.editing">
+          <form ng-submit="doneEditing(todo)">
+            <input class="edit" ng-model="todo.title" todo-blur="doneEditing(todo)" todo-focus="todo == editedTodo">
           </form>
         </li>
       </ul>
     </section>
-    <footer id="footer" ng-show="todos.length">
-      <span id="todo-count"><strong>{{remainingTodos().length}}</strong> <ng-pluralize count="remainingTodos().length" when="todoForms"></ng-pluralize></span>
+    <footer id="footer" ng-show="todos.length" ng-cloak>
+      <span id="todo-count"><strong>{{remainingCount}}</strong>
+        <ng-pluralize count="remainingCount" when="{ one: 'item left', other: 'items left' }"></ng-pluralize>
+      </span>
       <ul id="filters">
         <li>
           <a ng-class="{selected: location.path() == '/'} " href="#/">All</a>
@@ -46,7 +50,7 @@
           <a ng-class="{selected: location.path() == '/completed'}" href="#/completed">Completed</a>
         </li>
       </ul>
-      <button id="clear-completed" ng-click="clearDoneTodos()" ng-show="completedTodos().length" ng-bind-template="Clear completed ({{completedTodos().length}})"></button>
+      <button id="clear-completed" ng-click="clearDoneTodos()" ng-show="doneCount">Clear completed ({{doneCount}})</button>
     </footer>
   </section>
   <footer id="info">
@@ -55,7 +59,10 @@
   </footer>
   <script src="../../assets/base.js"></script>
   <script src="js/libs/angular/angular.min.js"></script>
-  <script src="js/controllers/todo.js"></script>
-  <script src="js/directives/todo-directives.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/controllers/todoCtrl.js"></script>
+  <script src="js/services/todoStorage.js"></script>
+  <script src="js/directives/todoFocus.js"></script>
+  <script src="js/directives/todoBlur.js"></script>
 </body>
 </html>
