Added AMD version of angularjs-perf using require.js
Controllers and directives share a common app namespace, which is an angular
module that is loaded via require.js. The angular-loader is inlined so the
loading of angular.js and the modules can happen in parallel.

--- a/labs/index.html
+++ b/labs/index.html
@@ -96,6 +96,9 @@
 						<li>
 							<a href="dependency-examples/knockoutjs_require/index.html" data-source="" data-content="This project is an adaptation of /architecture-examples/knockoutjs with require.js.">Knockout + Require.js *</a>
 						</li>
+						<li>
+							<a href="dependency-examples/angularjs_require/index.html" data-source="http://angularjs.org" data-content="What HTML would have been had it been designed for web apps. This is an example of using it with AMD modules.">AngularJS + RequireJS</a>
+						</li>
 					</ul>
 					<ul class="nav nav-pills">
 						<li>
@@ -178,6 +181,7 @@
 					<a href="https://github.com/krebbl">krebbl</a>
 					<a href="http://github.com/hay">Hay Kranen</a>
 					<a href="https://github.com/mikaelkaron">Mikael Karon</a>
+					<a href="https://github.com/passy">Pascal Hartig</a>
 				</p>
 			</footer>
 		</div>
