--- a/dependency-examples/emberjs_require/index.html
+++ b/dependency-examples/emberjs_require/index.html
@@ -11,13 +11,7 @@
 	<![endif]-->
 </head>
 <body>
-	<section id="todoapp">
-		<header id="header">
-			<h1>todos</h1>
-		</header>
-		<section id="main"></section>
-		<footer id="footer"></footer>
-	</section>
+	<section id="todoapp"></section>
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
 		<p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
