--- a/labs/architecture-examples/rappidjs/index.html
+++ b/labs/architecture-examples/rappidjs/index.html
@@ -1,28 +1,25 @@
-<!DOCTYPE HTML>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-    <title>TodoMVC build with rAppid.js</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link rel="stylesheet" href="../../../assets/base.css">
-    <!-- CSS overrides - remove if you don't need it -->
-    <link rel="stylesheet" href="css/app.css">
-    <!--[if IE]>
-    <script src="../../../assets/ie.js"></script>
-    <![endif]-->
-    <script type="text/javascript" src="package/rappidjs.min.js"></script>
-    <script type="text/javascript">
-        rAppid.bootStrap("app/Todo.xml", "config.json",
-                function (err, systemManager, application) {
-                    if (!err) {
-                        application.start(null, function () {
-                            application.render(document.body);
-                        });
-                    } else {
-                        console.warn(err);
-                    }
-                });
-    </script>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>rAppid.js • TodoMVC</title>
+	<link rel="stylesheet" href="../../../assets/base.css">
+	<link rel="stylesheet" href="css/app.css">
+	<!--[if IE]>
+	<script src="../../../assets/ie.js"></script>
+	<![endif]-->
+	<script src="app/lib/rappidjs.min.js"></script>
+	<script>
+		rAppid.bootStrap( 'app/Todo.xml', 'config.json', function ( err, systemManager, application ) {
+			if ( !err ) {
+				application.start( null, function() {
+					application.render( document.body );
+				});
+			} else {
+				console.warn( err );
+			}
+		});
+	</script>
 </head>
-<body></body>
 </html>
