--- a/vanilla-examples/vanillajs/index.html
+++ b/vanilla-examples/vanillajs/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -27,6 +27,7 @@
 	</section>
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
+		<p>Template by <a href="http://github.com/sindresorhus">Sindre Sorhus</a></p>
 		<p>Created by <a href="http://twitter.com/ffesseler">Florian Fesseler</a></p>
 		<p>Cleanup, edits by <a href="http://github.com/boushley">Aaron Boushley</a></p>
 	</footer>
