--- a/vanilla-examples/vanillajs/index.html
+++ b/vanilla-examples/vanillajs/index.html
@@ -12,7 +12,7 @@
 <body>
 	<section id="todoapp">
 		<header id="header">
-			<h1>Todos</h1>
+			<h1>todos</h1>
 			<input id="new-todo" placeholder="What needs to be done?" autofocus>
 		</header>
 		<section id="main">
