--- a/architecture-examples/spine/index.html
+++ b/architecture-examples/spine/index.html
@@ -13,7 +13,7 @@
 	<section id="todoapp">
 		<header id="header">
 			<h1>todos</h1>
-			<input id="new-todo" placeholder="What needs to be done?">
+			<input id="new-todo" placeholder="What needs to be done?" autofocus>
 		</header>
 		<section id="main">
 			<input id="toggle-all" type="checkbox">
