Replace mocha and chai with jasmine.

--- a/dependency-examples/emberjs_require/index.html
+++ b/dependency-examples/emberjs_require/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>ember.js + require.js • TodoMVC</title>
 	<link rel="stylesheet" href="../../assets/base.css">
+	<link rel="stylesheet" href="../../assets/jasmine/jasmine.css">
 	<link rel="stylesheet" href="css/app.css">
 	<!--[if IE]>
 	<script src="../../assets/ie.js"></script>
