--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="../../assets/base.css"/>
 </head>
 <body>
+
 	<section id="todoapp">
 		<header id="header">
 			<h1>Todos</h1>
@@ -24,13 +25,7 @@
 		<p>Created by <a href="http://addyosmani.github.com/todomvc/">Addy Osmani</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
-
-	<script src="js/libs/json2.js"></script>
-	<script src="../../assets/jquery.min.js"></script>
-	<script src="js/libs/underscore.js"></script>
-	<script src="js/libs/backbone.js"></script>
-	<script src="js/libs/backbone-localstorage.js"></script>
-	<script src="js/app.js"></script>
+  
 
 	<script type="text/template" id="item-template">
 		<div class="view">
@@ -58,5 +53,20 @@
 		<button id="clear-completed">Clear <%- completed %> completed <%= completed == 1 ? 'item' : 'items' %></button>
 		<% } %>
 	</script>
+
+  <script src="js/libs/json2.js"></script>
+  <script src="../../assets/jquery.min.js"></script>
+  <script src="js/libs/underscore.js"></script>
+  <script src="js/libs/backbone.js"></script>
+  <script src="js/libs/backbone-localstorage.js"></script>
+
+  <script src="js/init.js"></script>
+  <script src="js/models/todo.js"></script>
+  <script src="js/collections/todos.js"></script>
+  <script src="js/views/todoView.js"></script>
+  <script src="js/views/appView.js"></script>
+  <script src="js/routers/router.js"></script>
+  <script src="js/app.js"></script>
+
 </body>
 </html>
