Fixing clear completed

--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -50,7 +50,7 @@
 			</li>
 		</ul>
 		<% if (completed) { %>
-		<button id="clear-completed">Clear <%- completed %> completed <%= completed == 1 ? 'item' : 'items' %></button>
+		<button id="clear-completed">Clear completed (<%- completed %>)</button>
 		<% } %>
 	</script>
 
