libs -> lib, updating paths

--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -54,11 +54,10 @@
 		<% } %>
 	</script>
 
-  <script src="js/libs/json2.js"></script>
   <script src="../../assets/jquery.min.js"></script>
-  <script src="js/libs/underscore.js"></script>
-  <script src="js/libs/backbone.js"></script>
-  <script src="js/libs/backbone-localstorage.js"></script>
+  <script src="js/lib/underscore.js"></script>
+  <script src="js/lib/backbone.js"></script>
+  <script src="js/lib/backbone-localstorage.js"></script>
 
   <script src="js/init.js"></script>
   <script src="js/models/todo.js"></script>
