Improvements, switch to angular base version
- Strict mode
- Split up directives
- Require 'app' in 'main' to improve loading time
- Added Igor to contributors list

--- a/labs/dependency-examples/angularjs_require/index.html
+++ b/labs/dependency-examples/angularjs_require/index.html
@@ -34,7 +34,7 @@
       <ul id="todo-list">
         <li ng-repeat="todo in todos | filter:statusFilter" ng-dblclick="editTodo(todo)" ng-class="{completed: todo.completed, editing: todo == editedTodo}">
           <div class="view">
-            <input class="toggle" type="checkbox" ng-model="todo.completed" ng-change="todoCompleted(todo)">
+            <input class="toggle" type="checkbox" ng-model="todo.completed">
             <label>{{todo.title}}</label>
             <button class="destroy" ng-click="removeTodo(todo)"></button>
           </div>
@@ -64,7 +64,13 @@
   </section>
   <footer id="info">
     <p>Double-click to edit a todo.</p>
-    <p>Credits: <a href="http://twitter.com/cburgdorf">Christoph Burgdorf</a>, <a href="http://ericbidelman.com">Eric Bidelman</a>, <a href="http://jacobmumm.com">Jacob Mumm</a>, <a href="https://twitter.com/passy">Pascal Hartig</a></p>
+    <p>Credits:
+        <a href="http://twitter.com/cburgdorf">Christoph Burgdorf</a>,
+        <a href="http://ericbidelman.com">Eric Bidelman</a>,
+        <a href="http://jacobmumm.com">Jacob Mumm</a>,
+        <a href="http://igorminar.com">Igor Minar</a> and
+        <a href="http://twitter.com/passy">Pascal Hartig</a>
+     </p>
   </footer>
   <script src="../../../assets/base.js"></script>
   <script data-main="js/main" src="../../../assets/require.min.js"></script>
