--- a/labs/architecture-examples/extjs/index.html
+++ b/labs/architecture-examples/extjs/index.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>ExtJS • TodoMVC</title>
-        <!--<link rel="stylesheet" href="../../assets/base.css">-->
+        <!--<link rel="stylesheet" href="../../../assets/base.css">-->
         <link rel="stylesheet" href="css/app.css">
 	<!--[if IE]>
-        <script src="../../assets/ie.js"></script>
+        <script src="../../../assets/ie.js"></script>
 	<![endif]-->
 </head>
 <body>
@@ -25,7 +25,7 @@
                 Created by <a href="http://revolunet.com/">Revolunet</a><br />
                 Updates by <a href="http://github.com/boushley">Aaron Boushley</a>
 	</div>
-	<script src="../../assets/base.js"></script>
+	<script src="../../../assets/base.js"></script>
 	<script src="http://extjs.cachefly.net/ext-4.0.2a/bootstrap.js"></script>
 	<script src="js/app.js"></script>
 </body>
