--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -55,8 +55,8 @@
 	</script>
 
   <script src="../../assets/jquery.min.js"></script>
-  <script src="js/lib/underscore.js"></script>
-  <script src="js/lib/backbone.js"></script>
+  <script src="js/lib/underscore-min.js"></script>
+  <script src="js/lib/backbone-min.js"></script>
   <script src="js/lib/backbone-localstorage.js"></script>
 
   <script src="js/init.js"></script>
