fixing escaped templates.

--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -30,14 +30,14 @@
 	<script type="text/template" id="item-template">
 		<div class="view">
 			<input class="toggle" type="checkbox" <%= completed ? 'checked="checked"' : '' %> />
-			<label><%- title %></label>
+			<label><%= title %></label>
 			<button class="destroy"></button>
 		</div>
-		<input class="edit" type="text" value="<%- title %>" />
+		<input class="edit" type="text" value="<%= title %>" />
 	</script>
 	
 	<script type="text/template" id="stats-template">
-		<span id="todo-count"><strong><%- remaining %></strong> <%= remaining == 1 ? 'item' : 'items' %> left</span>
+		<span id="todo-count"><strong><%= remaining %></strong> <%= remaining == 1 ? 'item' : 'items' %> left</span>
 		<ul id="filters">
 			<li>
 				<a class="selected" href="#/">All</a>
@@ -50,7 +50,7 @@
 			</li>
 		</ul>
 		<% if (completed) { %>
-		<button id="clear-completed">Clear completed (<%- completed %>)</button>
+		<button id="clear-completed">Clear completed (<%= completed %>)</button>
 		<% } %>
 	</script>
 
