cujo.js: Remove HTML comments and add to site and readme

--- a/labs/index.html
+++ b/labs/index.html
@@ -102,6 +102,9 @@
 					</ul>
 					<ul class="nav nav-pills">
 						<li>
+							<a href="architecture-examples/cujo/index.html" data-source="http://cujojs.github.com" data-content="JavaScriptMVC is an open-source framework containing the best ideas in jQuery development. It guides you to successfully completed projects by promoting best practices, maintainability, and convention over configuration.">cujo.js</a>
+						</li>
+						<li>
 							<a href="architecture-examples/javascriptmvc/todo/todo/index.html" data-source="http://javascriptmvc.com/" data-content="JavaScriptMVC is an open-source framework containing the best ideas in jQuery development. It guides you to successfully completed projects by promoting best practices, maintainability, and convention over configuration.">JavaScriptMVC</a>
 						</li>
 						<li>
