Updating credits list.

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ had it been designed for web apps">AngularJS</a>
 			</div>
 			<hr>
 			<footer>
-				<p>© TodoMVC. Brought to you by <a href="https://github.com/addyosmani">Addy Osmani</a> (lead), <a href="https://github.com/boushley">Aaron Boushley</a> and <a href="https://github.com/sindresorhus">Sindre Sorhus</a>.</p>
+				<p>© TodoMVC. Brought to you by <a href="https://github.com/addyosmani">Addy Osmani</a>, <a href="https://github.com/sindresorhus">Sindre Sorhus</a> and the community.</p>
 				<p id="contributor-list">Big thanks to our magnificent contributors: <span></span></p>
 			</footer>
 		</div>
